kubernetes/apps/freshrss/freshrss/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
  namespace: freshrss
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - freshrss2.blackcats.cc
  rules:
    - backendRefs:
        - name: freshrss
          port: 80
